# aikidopy

./: .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  state_space_py.cpp
include/: dart_py.hpp  distance_py.hpp  rviz_py.hpp  state_space_py.hpp  trajectory_py.hpp
src/: aikidopy.cpp  dart_py.cpp  distance_py.cpp  rviz_py.cpp  state_space_py.cpp  trajectory_py.cpp
