<?xml version="1.0"?>
<package format="2">
    <name>aikidopy</name>
    <version>0.0.1</version>
    <description>
        Python bindings for AIKIDO.
    </description>
    <maintainer email="vinitha@cs.uw.edu">Vinitha Ranganeni</maintainer>
    <author email="vinitha@cs.uw.edu">Vinitha Ranganeni</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>aikido</depend>
    <!-- <depend>dartsim</depend> -->
    <depend>eigen</depend>

    <build_depend>pybind11_catkin</build_depend>
    <exec_depend>pybind11_catkin</exec_depend>

</package>
